2001-09-21  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pygobject_register_class): convert to use
	PyTypeObjects instead of ExtensionClass.
	(pygobject_new): don't need to set inst_dict.  Python takes care
	of that for us.
	(pyg_register_boxed): convert to 2.2.
	(pyg_boxed_new): convert to 2.2.
	(pyg_value_from_pyobject): get rid of ExtensionClass calls.
	(pygobject_init): convert to 2.2.

	* pygobject.h: don't include ExtensionClass.h

	* configure.in (AM_PATH_PYTHON): require python 2.2.

	* Makefile.am: remove ExtensionClass.

2001-09-20  James Henstridge  <james@daa.com.au>

	* pango.defs (FontMetrics): uncomment this now it has a boxed type.

	* gtk/Makefile.am (EXTRA_DIST): add gdk.override to dist.

	* configure.in: update version number.

	* pygobject.h (_PyGObject_Functions.newgobj): rename from new, so
	that the header is includable in C++ programs.

2001-09-19  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.defs (gtk_message_dialog_new): define defaults

	* gtk/gtk.override (_wrap_gtk_message_dialog_new): override this
	function so we can use "%s" as the format string and pass the
	entire last argument as a string securely.

2001-09-19  James Henstridge  <james@daa.com.au>

	* pango.defs: update for newer Pango API.

2001-09-19  James Henstridge  <james@daa.com.au>

	* pango.defs (FontDescription): remove fields from
	PangoFontDescription, as it is an opaque type now.

	* configure.in (ACLOCAL): require glib 1.3.8, pango 0.19 and gtk+
	1.3.8.

2001-09-18  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons): add a cast
	in pointer comparison to squelch compiler warning.

2001-09-18  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.defs (gtk_dialog_new_with_buttons): note the defaults in
	the definition.

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons): implement
	a full-featured constructor for GtkDialog that will allow flags
	(as well as other parameters) to be passed in during object